[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asana-extractor"
version = "0.1.0"
description = "Production-grade Asana data extractor with async concurrency and rate limiting"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "orjson>=3.9",
    "tenacity>=8.2",
]

[project.scripts]
asana-extractor = "asana_extractor.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/asana_extractor"]
